--- a/trial.html
+++ b/trial.html
@@ -15,7 +15,7 @@ stockphotography
                     <h1 id = "header-text">
                         StockPhotos
                     </h1>
-                    <img id = "header-list-icon" src="images/list icon.png" height="30px" width="30px">
+                    <img id = "header-list-icon" src="list icon.png" height="30px" width="30px">
                     <h5 id="header-inside-next">
                          Browse Categories
                     </h5>
@@ -32,7 +32,7 @@ stockphotography
                     
                     </div>
                     </div>
-                    <img id = "search-icon" src="images/zoom.png" height="47px" width="47px">
+                    <img id = "search-icon" src="zoom.png" height="47px" width="47px">
                     <h4 id = "lowertext-in-first-division"> Popular Categories >> </h4>
                 </div>
            </nav>
@@ -42,16 +42,16 @@ stockphotography
         <table>
                 <tr>
                        <td rowspan="2">
-                           <img src="images/image 1.jpg" height="600px" width="300px">
+                           <img src="image 1.jpg" height="600px" width="300px">
                        </td>
                        <td colspan="2">
-                        <img src="images/image 2.jpg" height="300px" width="600px">
+                        <img src="image 2.jpg" height="300px" width="600px">
                     </td>
                     <td>
-                        <img src="images/image 3.jpg" height="300px" width="300px">
+                        <img src="image 3.jpg" height="300px" width="300px">
                     </td>
                     <td>
-                           <img src="images/image 4.jpg" height="300px" width="300px">
+                           <img src="image 4.jpg" height="300px" width="300px">
                        </td>
                 </tr>
 
@@ -59,32 +59,32 @@ stockphotography
 
                 <tr>
                     <td>
-                        <img src="images/image 5.jpg" height="300px" width="300px">
+                        <img src="image 5.jpg" height="300px" width="300px">
                     </td>
                     <td>
-                     <img src="images/image 6.jpg" height="300px" width="300px">
+                     <img src="image 6.jpg" height="300px" width="300px">
                  </td>
                  <td rowspan="2">
-                     <img src="images/image 7.jpg" height="300px" width="300px">
+                     <img src="image 7.jpg" height="300px" width="300px">
                  </td>
                  <td>
-                        <img src="images/image 1.jpg" height="300px" width="300px">
+                        <img src="image 1.jpg" height="300px" width="300px">
                     </td>
                 </tr>
 
 
                 <tr>
                     <td rowspan="2">
-                        <img src="images/image 2.jpg" height="300px" width="300px">
+                        <img src="image 2.jpg" height="300px" width="300px">
                     </td>
                     <td>
-                     <img src="images/image 3.jpg" height="300px" width="300px">
+                     <img src="image 3.jpg" height="300px" width="300px">
                  </td>
                  <td>
-                     <img src="images/image 4.jpg" height="300px" width="300px">
+                     <img src="image 4.jpg" height="300px" width="300px">
                  </td>
                  <td>
-                        <img src="images/image 5.jpg" height="300px" width="300px">
+                        <img src="image 5.jpg" height="300px" width="300px">
                     </td>
                 </tr>
 
@@ -92,32 +92,32 @@ stockphotography
 
                 <tr>
                     <td>
-                        <img src="images/image 6.jpg" height="300px" width="300px">
+                        <img src="image 6.jpg" height="300px" width="300px">
                     </td>
                     <td>
-                     <img src="images/image 7.jpg" height="300px" width="300px">
+                     <img src="image 7.jpg" height="300px" width="300px">
                  </td>
                  <td rowspan="2">
-                     <img src="images/image 1.jpg" height="300px" width="300px">
+                     <img src="image 1.jpg" height="300px" width="300px">
                  </td>
                  <td>
-                        <img src="images/image 2.jpg" height="300px" width="300px">
+                        <img src="image 2.jpg" height="300px" width="300px">
                     </td>
                 </tr>
 
 
                 <tr>
                     <td>
-                        <img src="images/image 5.jpg" height="300px" width="300px">
+                        <img src="image 5.jpg" height="300px" width="300px">
                     </td>
                     <td>
-                     <img src="images/image 6.jpg" height="300px" width="300px">
+                     <img src="image 6.jpg" height="300px" width="300px">
                  </td>
                  <td>
-                     <img src="images/image 7.jpg" height="300px" width="300px">
+                     <img src="image 7.jpg" height="300px" width="300px">
                  </td>
                  <td>
-                        <img src="images/image 1.jpg" height="300px" width="300px">
+                        <img src="image 1.jpg" height="300px" width="300px">
                     </td>
                 </tr>
 
